# task-management

./: .gitignore  README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: c6c81e64ab03_init.py
src/: app.py  background_task_process.py  config.py  db.py  dependencies.py  repositories.py  schemes.py
src/api/v1/: tasks.py
tests/: conftest.py  test_endpoints.py  test_repositories.py
